tests/valid/test2.c
int counter = 10;
int is_even;

while (counter > 0)
{
    if (counter == 5)
    {
        is_even = 0;
    }
    else
    {
        is_even = 1;
    }
    counter = counter - 1;
}