tests/errors/test3.c
int limit = 10;

// start is undeclared in the loop condition
while (start < limit)
{

    Type mismatch inside the loop body
        limit = 5.5;
}